woops back to pdf

--- a/src/content/index/default.yml
+++ b/src/content/index/default.yml
@@ -1,6 +1,6 @@
 :title: "Eddie Samuels"
 :headline:
 :body: |
-    Hello! Here are some [things](/projects) I've made and here's my [resume](/resume/resume.html).
+    Hello! Here are some [things](/projects) I've made and here's my [resume](/resume/resume.pdf).
 
     Thanks for stopping by!
