index update, css changes

--- a/src/content/index/default.yml
+++ b/src/content/index/default.yml
@@ -1,6 +1,12 @@
 :title: "Eddie Samuels"
 :headline:
 :body: |
-    Hello! Here are some [things](/projects) I've made and here's my [resume](/resume/resume.pdf).
+    I make hardware!
+
+    *Previously:* worked on the [panda](https://techcrunch.com/2017/07/07/comma-ai-launches-an-88-universal-car-interface-called-panda/) OBDII interface and the [eon](https://www.engadget.com/2017/10/24/comma-ai-eon-autonomous-future/) driver development kit at comma.ai
+
+    ***Currently:*** **looking for new oppoutunities in San Diego**
+
+    Check out my [resume](/resume/resume.pdf)
 
     Thanks for stopping by!
