--- a/src/content/index/default.yml
+++ b/src/content/index/default.yml
@@ -5,8 +5,8 @@
 
     *Previously:* worked on the [panda](https://techcrunch.com/2017/07/07/comma-ai-launches-an-88-universal-car-interface-called-panda/) OBDII interface and the [eon](https://www.engadget.com/2017/10/24/comma-ai-eon-autonomous-future/) driver development kit at comma.ai
 
-    ***Currently:*** **looking for new oppoutunities in San Diego**
+    ***Currently:*** **accepting gigs @[studlabs](https://studlabs.com)**
 
-    Check out my [resume](/resume/resume.pdf)
+    Check out my [resume](/resume.pdf)
 
     Thanks for stopping by!
